Fixed RCAR for 0 rule case.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export("CBA",
         "transactions2DF",
         "mineCARs",
         "response",
+        "classes",
         "classFrequency",
         "majorityClass",
         "transactionCoverage",
