--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,4 +19,5 @@ License: GPL-3
 URL: https://github.com/mhahsler/arulesCBA
 BugReports: https://github.com/mhahsler/arulesCBA
 RoxygenNote: 7.1.2
+Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
