--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: arulesCBA
-Version: 1.2.4-1
-Date: 2022-xx-xx
+Version: 1.2.5
+Date: 2022-08-19
 Title: Classification Based on Association Rules
 Authors@R: c(
   person("Michael", "Hahsler", role=c("aut", "cre", "cph"),
@@ -13,13 +13,13 @@ Description: Provides the infrastructure for association rule-based classificati
   CBA, CMAR, CPAR, C4.5, FOIL, PART, PRM, RCAR, and RIPPER to build associative classifiers. 
   Hahsler et al (2019) <doi:10.32614/RJ-2019-048>.
 Maintainer: Michael Hahsler <mhahsler@lyle.smu.edu>
-Depends: R (>= 3.5.0), Matrix (>= 1.2-0), arules (>= 1.6-5) 
+Depends: R (>= 4.0.0), Matrix (>= 1.4-0), arules (>= 1.7-4)
 Imports: methods, discretization (>= 1.0-1), glmnet (>= 3.0-0) 
 Suggests: testthat, mlbench, rJava, RWeka
 SystemRequirements: Java (>= 8)
 License: GPL-3
 URL: https://github.com/mhahsler/arulesCBA
 BugReports: https://github.com/mhahsler/arulesCBA
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
 Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
