--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: arulesCBA
 Version: 1.2.6
-Date: 2022-xx-xx
+Date: 2024-04-15
 Title: Classification Based on Association Rules
 Authors@R: c(
   person("Michael", "Hahsler", role=c("aut", "cre", "cph"),
@@ -20,6 +20,6 @@ SystemRequirements: Java (>= 8)
 License: GPL-3
 URL: https://github.com/mhahsler/arulesCBA
 BugReports: https://github.com/mhahsler/arulesCBA
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
