--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: arulesCBA
-Version: 1.2.6
-Date: 2024-04-15
+Version: 1.2.6.1
+Date: 2024-xx-xx
 Title: Classification Based on Association Rules
 Authors@R: c(
   person("Michael", "Hahsler", role=c("aut", "cre", "cph"),
