--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: arulesCBA
-Version: 1.2.7
-Date: 2024-05-15
+Version: 1.2.7-1
+Date: 2024-xx-xx
 Title: Classification Based on Association Rules
 Authors@R: c(
   person("Michael", "Hahsler", role=c("aut", "cre", "cph"),
@@ -19,7 +19,7 @@ Suggests: testthat, mlbench, rJava, RWeka
 SystemRequirements: Java (>= 8)
 License: GPL-3
 URL: https://github.com/mhahsler/arulesCBA
-BugReports: https://github.com/mhahsler/arulesCBA
+BugReports: https://github.com/mhahsler/arulesCBA/issues
 RoxygenNote: 7.3.1
 Roxygen: list(markdown = TRUE)
 Encoding: UTF-8
