Fixed partial argument matches.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: arulesCBA
-Version: 1.2.8
-Date: 2025-07-16
+Version: 1.2.8.1
+Date: 2025-xx-xx
 Title: Classification Based on Association Rules
 Authors@R: c(
   person("Michael", "Hahsler", role=c("aut", "cre", "cph"),
